--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,38 @@
   <artifactId>Chess</artifactId>
   <version>1.0</version>
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
+	<dependency>
+		<groupId>org.apache.commons</groupId>
+		<artifactId>commons-math3</artifactId>
+		<version>3.6.1</version>
+		<systemPath></systemPath>
+	</dependency>
+	
+<dependency>
+    <groupId>org.fitnesse.plugins</groupId>
+    <artifactId>maven-classpath-plugin</artifactId>
+    <version>1.9</version>
+</dependency>
+
   </dependencies>
+  
+<build>
+ 
+  <plugins>  
+	        <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.1.1</version>
+        <configuration>
+          <archive>
+            <manifest>
+              <mainClass>Controller</mainClass>
+            </manifest>
+          </archive>
+        </configuration>
+      </plugin>
+  </plugins>
+ 
+</build>
+  
 </project>
