--- a/pom.xml
+++ b/pom.xml
@@ -4,39 +4,37 @@
   <groupId>ru.lanit</groupId>
   <artifactId>Chess</artifactId>
   <version>1.0</version>
-  <dependencies>
-	<dependency>
+  <packaging>jar</packaging> 
+	  
+	  
+	    <dependencies>
+  	<dependency>
 		<groupId>org.apache.commons</groupId>
 		<artifactId>commons-math3</artifactId>
 		<version>3.6.1</version>
-		<systemPath></systemPath>
 	</dependency>
-	
-<dependency>
-    <groupId>org.fitnesse.plugins</groupId>
-    <artifactId>maven-classpath-plugin</artifactId>
-    <version>1.9</version>
-</dependency>
+	    </dependencies>
+	  
+	    <build>
+    <plugins>
+<plugin>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-maven-plugin</artifactId>
+    <executions>
+        <execution>
+            <goals>
+                <goal>repackage</goal>
+            </goals>
+            <configuration>
+                <classifier>spring-boot</classifier>
+                <mainClass>
+                  Controller
+                </mainClass>
+            </configuration>
+        </execution>
+    </executions>
+</plugin>
+    </plugins>
+  </build>
 
-  </dependencies>
-  
-<build>
- 
-  <plugins>  
-	        <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>3.1.1</version>
-        <configuration>
-          <archive>
-            <manifest>
-              <mainClass>Controller</mainClass>
-            </manifest>
-          </archive>
-        </configuration>
-      </plugin>
-  </plugins>
- 
-</build>
-  
 </project>
