--- a/pom.xml
+++ b/pom.xml
@@ -6,35 +6,94 @@
   <version>1.0</version>
   <packaging>jar</packaging> 
 	  
-	  
-	    <dependencies>
-  	<dependency>
-		<groupId>org.apache.commons</groupId>
-		<artifactId>commons-math3</artifactId>
-		<version>3.6.1</version>
-	</dependency>
-	    </dependencies>
-	  
-	    <build>
-    <plugins>
-<plugin>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-maven-plugin</artifactId>
-    <executions>
-        <execution>
-            <goals>
-                <goal>repackage</goal>
-            </goals>
-            <configuration>
-                <classifier>spring-boot</classifier>
-                <mainClass>
-                  Controller
-                </mainClass>
-            </configuration>
-        </execution>
-    </executions>
-</plugin>
-    </plugins>
-  </build>
 
+<profiles>
+	<profile>
+		<id>Controller</id>
+		
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			
+			<properties>
+				<main.class>Controller</main.class>
+			</properties>
+	  
+	<dependencies>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-math3</artifactId>
+			<version>3.6.1</version>
+		</dependency>
+	</dependencies>
+	  
+<build>
+	<plugins>
+		<plugin>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+						
+						<configuration>
+							<classifier>spring-boot</classifier>
+							<mainClass>
+								${main.class}
+							</mainClass>
+						</configuration>
+					</execution>
+				</executions>
+		</plugin>
+    </plugins>
+ </build>
+	</profile>
+  
+  
+	<profile>
+		<id>Controller1</id>
+		
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			
+			<properties>
+				<main.class>Controller1</main.class>
+			</properties>
+			
+				<dependencies>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-math3</artifactId>
+			<version>3.6.1</version>
+		</dependency>
+	</dependencies>
+
+<build>
+	<plugins>
+		<plugin>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+						
+						<configuration>
+							<classifier>spring-boot</classifier>
+							<mainClass>
+								${main.class}
+							</mainClass>
+						</configuration>
+					</execution>
+				</executions>
+		</plugin>
+    </plugins>
+ </build>
+	</profile>
+	
+</profiles>
 </project>
